[package]
name = "brim"
version = "4.1.0"
edition = "2021"

description = "An optimizing brain* interpreter."
authors = ["Kyllingene"]
repository = "https://github.com/kyllingene/brim"
license = "MIT"

keywords = ["cli", "command-line", "interpreter"]
categories = ["command-line-interface"]

[dependencies]
sarge = "7.0"

[features]
default = []
dynamic_array = []
nowrap = []
wide_cell = []
signed_cell = []
debug = []
